2019-01-11  Wenson Hsieh  <wenson_hsieh@apple.com>

        [iOS] Precision drop state thrashes when dragging near the top edge of an editable element
        https://bugs.webkit.org/show_bug.cgi?id=193364
        <rdar://problem/47214117>

        Reviewed by Tim Horton.

        Add a new helper method on DragCaretController to compute the bounds of the editable element around the drop
        caret position. This is either the enclosing form control (in the case of text fields and text areas), or the
        highest editable root. See WebKit ChangeLog for more details.

        Test: DragAndDropTests.AvoidPreciseDropNearTopOfTextArea

        * editing/FrameSelection.cpp:
        (WebCore::DragCaretController::editableElementRectInRootViewCoordinates const):
        * editing/FrameSelection.h:

2019-01-11  Tim Horton  <timothy_horton@apple.com>

        REGRESSION (PSON): Firefox app lacks Open in New Tab in menu
        https://bugs.webkit.org/show_bug.cgi?id=193366
        <rdar://problem/46097212>

        Reviewed by Simon Fraser.

        * platform/RuntimeApplicationChecks.h:
        * platform/cocoa/RuntimeApplicationChecksCocoa.mm:
        (WebCore::IOSApplication::isFirefox):
        Add a Firefox Mobile bundle check.

2019-01-11  Antti Koivisto  <antti@apple.com>

        Release assert when removing element with a map element in the shadow tree
        https://bugs.webkit.org/show_bug.cgi?id=193351
        <rdar://problem/47208807>

        Reviewed by Ryosuke Niwa.

        When a shadow host that has a map element in the shadow tree is removed from the document, we try
        to remove the map from the scope of the host.

        Test: fast/shadow-dom/image-map-tree-scope.html

        * html/HTMLMapElement.cpp:
        (WebCore::HTMLMapElement::insertedIntoAncestor):
        (WebCore::HTMLMapElement::removedFromAncestor):

        Add and remove image maps when the scope changes, not when the document changes.